# RiverAnalysis

./: .gitattributes  README.md
ENet/: .gitmodules  README.md
ENet/final_model_weights/: bn_conv_merged_model.prototxt  bn_conv_merged_weights.caffemodel  无标题文档
ENet/final_model_weights/add_upsample/: bn_conv_merged_model.prototxt  bn_conv_merged_weights.caffemodel
ENet/final_model_weights/clothe/: bn_conv_merged_model.prototxt  bn_conv_merged_weights.caffemodel
ENet/final_model_weights/first/: bn_conv_merged_model.prototxt  bn_conv_merged_weights.caffemodel
ENet/final_model_weights/merge_bn_scale/: bn_conv_merged_model.prototxt  bn_conv_merged_weights.caffemodel
ENet/final_model_weights/多尺寸/: bn_conv_merged_model.prototxt  bn_conv_merged_model1.prototxt  bn_conv_merged_weights.caffemodel
ENet/prototxts/: enet_deploy.prototxt  enet_deploy_final.prototxt  enet_deploy_v1.prototxt  enet_solver_encoder.prototxt  enet_solver_encoder_decoder.prototxt  enet_train_encoder.prototxt  enet_train_encoder_decoder.prototxt  mergeBn.py
ENet/prototxts/add_upsample/: enet_deploy.prototxt  enet_train_encoder.prototxt  enet_train_encoder_decoder.prototxt
ENet/prototxts/merge_bn_scale/: enet_deploy.prototxt  enet_train_encoder_decoder.prototxt
ENet/prototxts/多尺寸/: enet_train_encoder_decoder_v1.prototxt
ENet/scripts/: BN-absorber-enet.py  BN-absorber-enet.sh  compute_bn_statistics.py  compute_bn_statistics.sh  create_enet_prototxt.py  mergeBn.py  test_seg.sh  test_segmentation.py  test_segmentation1.py
ENet/weights/snapshots_decoder/enet/first/: _iter_10000.caffemodel  _iter_10000.solverstate  _iter_10037.caffemodel  _iter_10037.solverstate
ENet/weights/snapshots_encoder/enet/first/: _iter_10000.caffemodel  _iter_10000.solverstate  _iter_20000.caffemodel  _iter_20000.solverstate  _iter_22344.caffemodel  _iter_22344.solverstate
ENet/weights/weights_bn/: weights_bn.caffemodel
ENet/weights/weights_bn/first/: weights_bn_v0.caffemodel
RiverAnalysis/: CMakeLists.txt  RiverAnalysis.cpp
RiverAnalysis/config/: 2.config  Configlist.config
RiverAnalysis/include/: AlarmMsgQueue.h  Analysis.h  AnalysisConfig.pb.h  AnalysisManager.h  DefineColor.h  FishingThread.h  FishingThread.h.new  FloaterThread.h  GaussBgModeling.h  InvadeThread.h  LitterThread.h  RiverThread.h  TensorflowThread.h  WaterColorThread.h  WaterGaugeThread.h  cv320PutChText.h  http_client.h  mongoose.h
RiverAnalysis/proto/: AnalysisConfig.proto  CMakeLists.txt
RiverAnalysis/src/: AlarmMsgQueue.cpp  Analysis.cpp  AnalysisConfig.pb.cc  AnalysisManager.cpp  DefineColor.cpp  FishingThread.cpp  FloaterThread.cpp  GaussBgModeling.cpp  InvadeThread.cpp  LitterThread.cpp  RiverThread.cpp  TensorflowThread.cpp  WaterColorThread.cpp  WaterGaugeThread.cpp  cv320PutChText.cpp  http_client.cpp  mongoose.c
bazel-0.15.1/: .gitattributes  .gitignore  AUTHORS  BUILD  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS  ISSUE_TEMPLATE.md  README.md  WORKSPACE  combine_distfiles.py  combine_distfiles_to_tar.sh  compile.sh  distdir.bzl
